--- a/resources/css/Navigator.scss
+++ b/resources/css/Navigator.scss
@@ -1,67 +1,81 @@
-.navigator{
-    display: flex;
-    flex-direction: column;
+$color1: #D6003D;
+$color2: #575756;
+$color3: #2E1E3A;
+$color4: #ffffff;
+$color5: #000000;
+
+.navigator {
+    width: 100vw;
+    height: 100vh;
+    position: absolute;
 
     .burger_menu {
         display: flex;
         flex-direction: column;
-        align-items: flex-end;
         justify-content: space-around;
 
-        width: 100vw;
-        height: 4em;
-        margin-top: 2em;
-        padding-right: 5em;
+        width: 5%;
+        height: 5%;
+        margin-top: 2%;
+        margin-left: 90%;
 
         position: absolute;
         cursor: pointer;
-        
-        .burger-bar{
-            width: 5em;
-            height: 0.7em;
-            background-color: white;
+        z-index: 2;
+
+        .burger-bar {
+            width: 100%;
+            height: 10%;
+            background-color: $color4;
             border-radius: 0.5em;
 
-            &.clicked{
+            transition: background-color .3s ease-in-out;
+        }
 
-            }
-
-            &.unlcicked{
-
+        &:hover {
+            .burger-bar {
+                background-color: $color3;
             }
         }
 
-      
+
     }
 
-    .menu{
-        align-self: flex-end;
+    .menu {
         display: flex;
         flex-direction: column;
         align-items: center;
-        justify-content: space-around;
-        
+        justify-content: space-evenly;
         width: 30%;
-        height: 100vh;
-        background-color: aqua;
-        
-        &.hidden{
+        height: 100%;
+
+        // background-color: aqua;
+        margin-left: 70%;
+        padding-top: 100px;
+
+        &.hidden {
             display: none;
-            // transition: ease-in 2s;
         }
 
-        &.visible{
-            display: inherit;
-            // transition: ease-in 2s;
-        }
+        .nav_menu_link {
 
-        .nav_menu_link_1 {
-            stroke: none;
-            font-size: 40px;
+            z-index: 2;
+            margin-bottom: 10%;
             cursor: pointer;
 
-            &:hover{
-                font-size: 50px;
+            color: $color4;
+            font-size: 40px;
+            text-decoration: none;
+            text-shadow: 3px 3px 5px $color3;
+
+            transition: color .3s ease-in-out, font-size .5s ease-in-out, text-shadow .5s ease-in-out;
+
+            &:hover {
+
+                color: $color3;
+                // font-size: 50px;
+                text-shadow: 3px 3px 5px $color4;
+
             }
         }
     }
