--- a/resources/css/Navigator.scss
+++ b/resources/css/Navigator.scss
@@ -9,6 +9,11 @@ $color5: #000000;
     height: 100vh;
     position: absolute;
 
+    .top_of_page-marquee {
+        position: absolute;
+        z-index: -1;
+    }
+
     .burger_menu {
         display: flex;
         flex-direction: column;
@@ -25,16 +30,50 @@ $color5: #000000;
 
         .burger-bar {
             width: 100%;
-            height: 10%;
+            height: 0.35em;
             background-color: $color4;
             border-radius: 0.5em;
+            box-shadow: 3px 3px 5px $color3;
 
-            transition: background-color .3s ease-in-out;
+            transition: background-color .3s ease-in-out, box-shadow .5s ease-in-out;
+
+
+            
+            &.clicked:nth-child(1){
+                background-color: $color3;
+                box-shadow: 3px -3px 5px $color4;
+                transform: rotate(45deg) translate(1.5em, 1.25em);
+                transition: 0.5s ease-in;
+
+            }
+            &.clicked:nth-child(2){
+                background-color: $color3;
+                box-shadow: 0px -3px 5px $color4;
+                transform: rotate(135deg) translate(1.95em, -0.85em) scale(0.43, 1);
+                transition: 0.5s ease-in;
+            }
+            &.clicked:nth-child(3){
+                background-color: $color3;
+                box-shadow: 0px -3px 5px $color4;
+                transform: rotate(135deg) translate(-1.4em, -0.25em) scale(0.45, 1);
+                transition: 0.5s ease-in;
+            }
+
+            &.unclicked{
+                transition: 0.5s ease-in;
+            }
         }
 
-        &:hover {
+        &:hover,
+        &:active {
             .burger-bar {
                 background-color: $color3;
+                box-shadow: 3px 3px 5px $color4;
+
+                &.clicked{
+                    background-color: $color4;
+                    box-shadow: 0px -3px 5px $color3;
+                }
             }
         }
     }
@@ -47,12 +86,20 @@ $color5: #000000;
         width: 30%;
         height: 100%;
 
-        // background-color: aqua;
+        // background-color: $color1;
         margin-left: 70%;
         padding-top: 100px;
 
+        transition: 0.5s ease-in-out;
+
         &.hidden {
-            display: none;
+            opacity: 0;
+            z-index: -2;
+            transform: translate(10em, 0em);
+        }
+
+        &.visible {
+            opacity: 1;
         }
 
         .nav_menu_link {
@@ -68,10 +115,11 @@ $color5: #000000;
 
             transition: color .3s ease-in-out, font-size .5s ease-in-out, text-shadow .5s ease-in-out;
 
-            &:hover {
+            &:hover,
+            &:active {
 
                 color: $color3;
-                // font-size: 50px;
+                font-size: 50px;
                 text-shadow: 3px 3px 5px $color4;
 
             }
