--- a/resources/css/Navigator.scss
+++ b/resources/css/Navigator.scss
@@ -14,6 +14,21 @@ $color5: #000000;
         z-index: -1;
     }
 
+    .theme_selector{
+        position: absolute;
+        cursor: pointer;
+        width: 5%;
+        height: 5%;
+        margin-top: 3%;
+        margin-left: 3%;
+
+        .theme_selector_switch{
+            z-index: 1;
+
+
+        }
+    }
+
     .burger_menu {
         display: flex;
         flex-direction: column;
