--- a/resources/css/Navigator.scss
+++ b/resources/css/Navigator.scss
@@ -20,12 +20,10 @@ $color5: #000000;
         width: 5%;
         height: 5%;
         margin-top: 3%;
-        margin-left: 3%;
+        margin-left: 4.5%;
 
         .theme_selector_switch{
             z-index: 1;
-
-
         }
     }
 
@@ -52,8 +50,6 @@ $color5: #000000;
 
             transition: background-color .3s ease-in-out, box-shadow .5s ease-in-out;
 
-
-            
             &.clicked:nth-child(1){
                 background-color: $color3;
                 box-shadow: 3px -3px 5px $color4;
@@ -73,9 +69,25 @@ $color5: #000000;
                 transform: rotate(135deg) translate(-1.4em, -0.25em) scale(0.45, 1);
                 transition: 0.5s ease-in;
             }
-
             &.unclicked{
                 transition: 0.5s ease-in;
+            }
+        }
+
+        .burger-bar.purple{
+            box-shadow: 3px 3px 5px $color1;
+
+            &.clicked:nth-child(1){
+                background-color: $color1;
+                box-shadow: 3px -3px 5px $color4;
+            }
+            &.clicked:nth-child(2){
+                background-color: $color1;
+                box-shadow: 0px -3px 5px $color4;
+            }
+            &.clicked:nth-child(3){
+                background-color: $color1;
+                box-shadow: 0px -3px 5px $color4;
             }
         }
 
@@ -135,6 +147,15 @@ $color5: #000000;
 
                 color: $color3;
                 font-size: 50px;
+                text-shadow: 3px 3px 5px $color4;
+
+            }
+        }
+        .nav_menu_link.purple{
+            text-shadow: 3px 3px 5px $color1;
+            &:hover,
+            &:active {
+                color: $color1;
                 text-shadow: 3px 3px 5px $color4;
 
             }
