--- a/resources/css/Navigator.scss
+++ b/resources/css/Navigator.scss
@@ -102,6 +102,15 @@ $color5: #000000;
                     box-shadow: 0px -3px 5px $color3;
                 }
             }
+            .burger-bar.purple {
+                background-color: $color1;
+                box-shadow: 3px 3px 5px $color4;
+
+                &.clicked{
+                    background-color: $color4;
+                    box-shadow: 0px -3px 5px $color1;
+                }
+            }
         }
     }
 
