--- a/resources/css/MainPage.scss
+++ b/resources/css/MainPage.scss
@@ -10,36 +10,115 @@ $color5: #000000;
 
     .main_page_back {
         z-index: -1;
-
     }
 
     .main_page_front {
         display: flex;
         flex-direction: column;
-        align-items: center;
-       
-        
+        width: inherit;
+        height: inherit;
 
-        // width: inherit;
-        // height: inherit;
+        .welcome_text {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            z-index: -1;
 
-        .welcome_message{
-            padding: 5%;
-            font-size: 50px;
-            text-shadow: 3px 3px 5px $color3;
-            transition: 0.5s ease-in-out;
+            animation: grow 2s infinite;
 
-            &.end{
-                margin-top: 25%;
+            .welcome_message {
+                padding: 5%;
+                font-size: 50px;
+                text-shadow: 3px 3px 5px $color3;
+                transition: 0.5s ease-in-out;
+
+                &.end {
+                    margin-top: 25%;
+                }
+
+                &.purple {
+
+                    text-shadow: 3px 3px 5px $color1;
+                }
+            }
+        }
+
+        .welcome_embed_div {
+            position: relative;
+
+            &.youtube{
+                bottom: 80%;
+                left: 10%;
+                width: 150px;
             }
 
-            &.purple{
+            &.soundcloud{
+                bottom: 50%;
+                left: 15%;
+                width: 150px;
+            }
+
+
+            .embed_label{
+                text-align: center;
+                z-index: -2;
+
+                &.shaking_animation{
+                    animation: shake 1s infinite;
+                }
+            }
+
+            iframe {
+                width: 100%;
                 
-                text-shadow: 3px 3px 5px $color1;
+                border-radius: 2em;
+                box-shadow: 0px 0px 20px $color3;
+                z-index: 2;
+                transition: 0.5s ease-in-out;
+
+                &.purple {
+                    box-shadow: 0px 0px 20px $color1;
+                }
+
+                &.shaking_animation {
+                    animation: shake 1s infinite;
+                }
             }
+
+
         }
     }
 
+}
 
+@keyframes shake {
 
+    0%,
+    100% {
+        transform: translateX(2px) rotate(0deg);
+    }
+
+    25% {
+        transform: translateX(0px) rotate(2deg);
+    }
+
+    50% {
+        transform: translateX(-2px) rotate(0deg);
+    }
+
+    75% {
+        transform: translateX(0px) rotate(-2deg);
+    }
+
+}
+
+@keyframes grow {
+    0%,100% {
+        transition: 0.1s ease-in-out;
+        transform: scale(1);
+    }
+    50% {
+        transition: 0.1s ease-in-out;
+        transform: scale(1.01);
+    }
 }
