--- a/resources/css/Navigator.scss
+++ b/resources/css/Navigator.scss
@@ -11,7 +11,27 @@ $color5: #000000;
 
     .top_of_page-marquee {
         position: absolute;
+        color: $color3;
         z-index: -1;
+
+        transition: 0.5s ease-in-out;
+
+        &.purple{
+            color: $color1;
+        }
+    }
+
+    .bottom_of_page-marquee {
+        position: absolute;
+        color: $color3;
+        z-index: -1;
+        bottom: 0px;
+
+        transition: 0.5s ease-in-out;
+
+        &.purple{
+            color: $color1;
+        }
     }
 
     .theme_selector{
