--- a/resources/css/MainPage.scss
+++ b/resources/css/MainPage.scss
@@ -25,14 +25,14 @@ $color5: #000000;
             animation: grow 2s infinite;
 
             .welcome_message {
-                padding: 20px;
+                padding: 10px;
                 margin-top: 100px;
                 font-size: 50px;
                 text-shadow: 3px 3px 5px $color3;
                 transition: 0.5s ease-in-out;
 
                 &.end {
-                    margin-top: 450px;
+                    margin-top: 9em;
                 }
 
                 &.purple {
@@ -41,51 +41,53 @@ $color5: #000000;
                 }
             }
         }
+        .welcome_embeds{
 
-        .welcome_embed_div {
-            position: absolute;
-            
-            &.youtube{
-                bottom: 34em;
-                left: 10%;
-                width: 150px;
-            }
-
-            &.soundcloud{
-                bottom: 7em;
-                left: 15%;
-                width: 150px;
-            }
-
-
-            .embed_label{
-                text-align: center;
-                z-index: -2;
-
-                &.shaking_animation{
-                    animation: shake 1s infinite;
-                }
-            }
-
-            iframe {
-                width: 100%;
+            .welcome_embed_div {
+                position: absolute;
                 
-                border-radius: 2em;
-                box-shadow: 0px 0px 20px $color3;
-                z-index: 2;
-                transition: 0.5s ease-in-out;
-
-                &.purple {
-                    box-shadow: 0px 0px 20px $color1;
+                &.youtube{
+                    bottom: 34em;
+                    left: 10%;
+                    width: 150px;
                 }
-
-                &.shaking_animation {
-                    animation: shake 1s infinite;
+    
+                &.soundcloud{
+                    bottom: 7em;
+                    left: 15%;
+                    width: 150px;
+                }
+    
+    
+                .embed_label{
+                    text-align: center;
+                    z-index: -2;
+    
+                    &.shaking_animation{
+                        animation: shake 1s infinite;
+                    }
+                }
+    
+                iframe {
+                    width: 100%;
+                    
+                    border-radius: 2em;
+                    box-shadow: 0px 0px 20px $color3;
+                    z-index: 2;
+                    transition: 0.5s ease-in-out;
+    
+                    &.purple {
+                        box-shadow: 0px 0px 20px $color1;
+                    }
+    
+                    &.shaking_animation {
+                        animation: shake 1s infinite;
+                    }
                 }
             }
-
 
         }
+        
     }
 
 }
