--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -28,6 +28,8 @@
 @import './Navigator.scss';
 @import './MainPage.scss';
 @import './AboutMe.scss';
+@import './Web.scss';
+@import './Music.scss';
 
 $font_family: Audiowide, Josefin Sans;
 
