--- a/resources/css/Web.scss
+++ b/resources/css/Web.scss
@@ -5,22 +5,22 @@ $color4: #ffffff;
 $color5: #000000;
 
 
-.about_me_page {
+.web_page {
     width: 100vw;
     height: 100vh;
 
-    .about_me_page_back {
+    .web_page_back {
         z-index: -1;
     }
 
-    .about_me_page_front {
+    .web_page_front {
         display: flex;
         flex-direction: column;
         width: inherit;
         height: inherit;
         align-items: center;
 
-        .about_me_para {
+        .web_para {
             font-size: 30px;
             text-align: center;
             margin-top: 100px;
