--- a/resources/css/Web.scss
+++ b/resources/css/Web.scss
@@ -26,15 +26,32 @@ $color5: #000000;
             margin-top: 100px;
             margin-right: 150px;
             margin-left: 150px;
-            
-            text-shadow: 3px 3px 5px $color3;
-                transition: 0.5s ease-in-out;
 
-            &.purple{
+            text-shadow: 3px 3px 5px $color3;
+            transition: 0.5s ease-in-out;
+
+            &.purple {
                 text-shadow: 3px 3px 5px $color1;
             }
         }
+
+        .web_embed {
+            z-index: 1;
+            margin-top: 30px;
+            width: 80%;
+            height: 70%;
+
+            border-radius: 2em;
+            box-shadow: 0px 0px 20px $color3;
+            z-index: 2;
+            transition: 0.5s ease-in-out;
+
+            &.purple {
+                box-shadow: 0px 0px 20px $color1;
+            }
+
+        }
     }
 
-    
+
 }
