lottie-player preparation

--- a/resources/css/Music.scss
+++ b/resources/css/Music.scss
@@ -34,6 +34,10 @@ $color5: #000000;
                 text-shadow: 3px 3px 5px $color1;
             }
         }
+
+        .music_lottie{
+            width: 400px;
+        }
     }
 
     
