--- a/resources/css/Navigator.scss
+++ b/resources/css/Navigator.scss
@@ -9,6 +9,8 @@ $color5: #000000;
     height: 100vh;
     position: absolute;
 
+    // background-color: $color2;
+
     .top_of_page-marquee {
         position: absolute;
         color: $color3;
@@ -16,7 +18,7 @@ $color5: #000000;
 
         transition: 0.5s ease-in-out;
 
-        &.purple{
+        &.purple {
             color: $color1;
         }
     }
@@ -29,20 +31,20 @@ $color5: #000000;
 
         transition: 0.5s ease-in-out;
 
-        &.purple{
+        &.purple {
             color: $color1;
         }
     }
 
-    .theme_selector{
+    .theme_selector {
         position: absolute;
         cursor: pointer;
         width: 5%;
         height: 5%;
-        margin-top: 3%;
+        margin-top: 50px;
         margin-left: 4.5%;
 
-        .theme_selector_switch{
+        .theme_selector_switch {
             z-index: 1;
         }
     }
@@ -52,60 +54,67 @@ $color5: #000000;
         flex-direction: column;
         justify-content: space-around;
 
-        width: 5%;
-        height: 5%;
-        margin-top: 2%;
-        margin-left: 90%;
-
         position: absolute;
+        right: 0;
+        width: 80px;
+        height: 46px;
+        margin-top: 40px;
+        margin-right: 4.5%;
         cursor: pointer;
-        z-index: 2;
+        z-index: 4;
 
         .burger-bar {
             width: 100%;
-            height: 0.35em;
+            height: 5.6px;
             background-color: $color4;
-            border-radius: 0.5em;
+            border-radius: 20px;
             box-shadow: 3px 3px 5px $color3;
 
             transition: background-color .3s ease-in-out, box-shadow .5s ease-in-out;
 
-            &.clicked:nth-child(1){
+            &.clicked:nth-child(1) {
                 background-color: $color3;
-                box-shadow: 3px -3px 5px $color4;
-                transform: rotate(45deg) translate(1.5em, 1.25em);
+                border-radius: 2px;
+                box-shadow: 1px -3px 4px $color4;
+                transform: rotate(45deg) translate(1.5em, 1.25em) scale(0.8, 1);
                 transition: 0.5s ease-in;
 
             }
-            &.clicked:nth-child(2){
+
+            &.clicked:nth-child(2) {
                 background-color: $color3;
-                box-shadow: 0px -3px 5px $color4;
-                transform: rotate(135deg) translate(1.95em, -0.85em) scale(0.43, 1);
+                box-shadow: -1px -3px 4px $color4;
+                transform: rotate(135deg) translate(1.63em, -0.93em) scale(0.33, 1);
+                transition: 0.5s ease-in;
+
+            }
+
+            &.clicked:nth-child(3) {
+                background-color: $color3;
+                box-shadow: -3px -3px 4px $color4;
+                transform: rotate(135deg) translate(-1.22em, -0.23em) scale(0.37, 1);
                 transition: 0.5s ease-in;
             }
-            &.clicked:nth-child(3){
-                background-color: $color3;
-                box-shadow: 0px -3px 5px $color4;
-                transform: rotate(135deg) translate(-1.4em, -0.25em) scale(0.45, 1);
-                transition: 0.5s ease-in;
-            }
-            &.unclicked{
+
+            &.unclicked {
                 transition: 0.5s ease-in;
             }
         }
 
-        .burger-bar.purple{
+        .burger-bar.purple {
             box-shadow: 3px 3px 5px $color1;
 
-            &.clicked:nth-child(1){
+            &.clicked:nth-child(1) {
                 background-color: $color1;
                 box-shadow: 3px -3px 5px $color4;
             }
-            &.clicked:nth-child(2){
+
+            &.clicked:nth-child(2) {
                 background-color: $color1;
                 box-shadow: 0px -3px 5px $color4;
             }
-            &.clicked:nth-child(3){
+
+            &.clicked:nth-child(3) {
                 background-color: $color1;
                 box-shadow: 0px -3px 5px $color4;
             }
@@ -117,16 +126,17 @@ $color5: #000000;
                 background-color: $color3;
                 box-shadow: 3px 3px 5px $color4;
 
-                &.clicked{
+                &.clicked {
                     background-color: $color4;
                     box-shadow: 0px -3px 5px $color3;
                 }
             }
+
             .burger-bar.purple {
                 background-color: $color1;
                 box-shadow: 3px 3px 5px $color4;
 
-                &.clicked{
+                &.clicked {
                     background-color: $color4;
                     box-shadow: 0px -3px 5px $color1;
                 }
@@ -136,24 +146,24 @@ $color5: #000000;
 
     .menu {
         z-index: 4;
-        
+
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: space-evenly;
-        width: 30%;
-        height: 100%;
 
-        // background-color: $color1;
-        margin-left: 70%;
-        padding-top: 100px;
-
+        float: right;
+        width: 500px;
+        height: inherit;
         transition: 0.5s ease-in-out;
+
+
+        // background-color: $color4;
 
         &.hidden {
             opacity: 0;
             transform: translate(10em, 0em);
-            
+
         }
 
         &.visible {
@@ -162,8 +172,8 @@ $color5: #000000;
 
         .nav_menu_link {
             z-index: 4;
-            
-            margin-bottom: 10%;
+
+            margin-bottom: 10px;
             cursor: pointer;
 
             color: $color4;
@@ -179,21 +189,66 @@ $color5: #000000;
                 color: $color3;
                 font-size: 50px;
                 text-shadow: 3px 3px 5px $color4;
-                
+
             }
 
             &:nth-child(2),
-            &:nth-child(3){
+            &:nth-child(3) {
                 margin-left: 200px;
             }
         }
-        .nav_menu_link.purple{
+
+        .nav_menu_link.purple {
             text-shadow: 3px 3px 5px $color1;
+
             &:hover,
             &:active {
                 color: $color1;
                 text-shadow: 3px 3px 5px $color4;
 
+            }
+        }
+    }
+
+    /* Media Query for Tablets and Mobile Devices */
+    @media (max-width: 768px) {
+
+        .burger_menu {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-around;
+
+            position: absolute;
+            right: 0;
+            width: 80px;
+            height: 46px;
+        }
+
+        .menu {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-evenly;
+            align-items: flex-start;
+            margin-top: 120px;
+            width: 100%;
+
+            &.hidden {
+                transform: translate(0em, 0em);
+            }
+
+            .nav_menu_link {
+                font-size: 20px;
+
+                &:nth-child(2),
+                &:nth-child(3) {
+                    margin-left: 0;
+                }
+
+                &:hover,
+                &:active {
+                    font-size: 25px;
+
+                }
             }
         }
     }
