--- a/resources/css/MainPage.scss
+++ b/resources/css/MainPage.scss
@@ -97,7 +97,7 @@ $color5: #000000;
 
 
             .welcome_text {
-                
+
 
                 .welcome_message {
                     font-size: 30px;
@@ -118,54 +118,114 @@ $color5: #000000;
                         bottom: 1em;
                         left: 10%;
                         width: 150px;
-                        
+
                     }
-    
+
                     &.soundcloud {
                         bottom: 1em;
                         left: 55%;
                         width: 150px;
-                        
+
                     }
                 }
             }
         }
     }
 
+    @media (max-height: 700px) {
+
+        .main_page_front {
+
+
+            .welcome_text {
+
+                .welcome_message {
+                    font-size: 30px;
+                    margin-top: 40%;
+
+                    &.end {
+                        margin-top: 50%;
+                    }
+                }
+            }
+
+        }
+    }
+
+    @media (max-width: 820px) {
+
+        .main_page_front {
+
+
+            .welcome_text {
+
+                .welcome_message {
+                    font-size: 40px;
+                    margin-top: 30%;
+
+                    &.end {
+                        margin-top: 50%;
+                    }
+                }
+            }
+
+            .welcome_embeds {
+
+                .welcome_embed_div {
+                    // transform: scale(0.7);
+
+                    &.youtube {
+                        bottom: 4em;
+                        left: 10%;
+                        width: 150px;
+
+                    }
+
+                    &.soundcloud {
+                        bottom: 4em;
+                        left: 70%;
+                        width: 150px;
+
+                    }
+                }
+            }
+
+        }
+    }
 }
 
 
-    @keyframes shake {
+@keyframes shake {
 
-        0%,
-        100% {
-            transform: translateX(2px) rotate(0deg);
-        }
-
-        25% {
-            transform: translateX(0px) rotate(2deg);
-        }
-
-        50% {
-            transform: translateX(-2px) rotate(0deg);
-        }
-
-        75% {
-            transform: translateX(0px) rotate(-2deg);
-        }
-
+    0%,
+    100% {
+        transform: translateX(2px) rotate(0deg);
     }
 
-    @keyframes grow {
-
-        0%,
-        100% {
-            transition: 0.1s ease-in-out;
-            transform: scale(1);
-        }
-
-        50% {
-            transition: 0.1s ease-in-out;
-            transform: scale(1.01);
-        }
+    25% {
+        transform: translateX(0px) rotate(2deg);
     }
+
+    50% {
+        transform: translateX(-2px) rotate(0deg);
+    }
+
+    75% {
+        transform: translateX(0px) rotate(-2deg);
+    }
+
+}
+
+@keyframes grow {
+
+    0%,
+    100% {
+        transition: 0.1s ease-in-out;
+        transform: scale(1);
+    }
+
+    50% {
+        transition: 0.1s ease-in-out;
+        transform: scale(1.01);
+    }
+}
