--- a/resources/css/MainPage.scss
+++ b/resources/css/MainPage.scss
@@ -9,31 +9,48 @@ $color5: #000000;
     height: 100vh;
 
     .main_page_back {
-        z-index: -1;
-    }
+        height: inherit;
+        width: inherit;
+        position: absolute;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: 0.5fr 1fr 1fr 1fr 0.7fr;
+        gap: 0px 0px;
+        grid-template-areas:
+            ". . ."
+            ". Middle ."
+            ". Middle ."
+            ". Middle ."
+            ". . .";
 
-    .main_page_front {
-        display: flex;
-        flex-direction: column;
+        z-index: -1;
 
         .welcome_text {
+            grid-area: Middle;
             display: flex;
             flex-direction: column;
             align-items: center;
+            justify-content: space-between;
+
             z-index: -1;
 
             animation: grow 2s infinite;
 
             .welcome_message {
-                padding: 10px;
-                margin-top: 6.5%;
-                font-size: 50px;
+                font-size: 3vw;
+                padding: 1vh;
                 text-shadow: 3px 3px 5px $color3;
                 transition: 0.5s ease-in-out;
+                overflow: visible;
+                white-space: nowrap;
+                // &.start{
 
-                &.end {
-                    margin-top: 30%;
-                }
+                // }
+
+                // &.end {
+
+                // }
+
 
                 &.purple {
 
@@ -41,21 +58,41 @@ $color5: #000000;
                 }
             }
         }
+    }
+
+
+
+    .main_page_front {
+
 
         .welcome_embeds {
+            height: 100vh;
+            width: 100vw;
+            display: grid;
+            grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+            grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+            gap: 0px 0px;
+            grid-template-areas:
+                ". . . . . . . . . . . . . ."
+                ". YouTube . . . . . . . . . . . ."
+                ". . . . . . . . . . . . . ."
+                ". . . . . . . . . . . . . ."
+                ". . . . . . . . . . . . . ."
+                ". . SoundCloud . . . . . . . . . . ."
+                ". . . . . . . . . . . . . .";
 
+            // z-index: -1;
             .welcome_embed_div {
-                position: absolute;
+
+                position: relative;
 
                 &.youtube {
-                    bottom: 34em;
-                    left: 10%;
+                    grid-area: YouTube;
                     width: 150px;
                 }
 
                 &.soundcloud {
-                    bottom: 7em;
-                    left: 15%;
+                    grid-area: SoundCloud;
                     width: 150px;
                 }
 
@@ -91,107 +128,44 @@ $color5: #000000;
 
     }
 
-    @media (max-width: 768px) {
-
-        .main_page_front {
-
+    @media only screen and (max-width: 820px) {
+        .main_page_back {
 
             .welcome_text {
-
+                justify-content: space-around;
 
                 .welcome_message {
-                    font-size: 30px;
-                    margin-top: 45%;
+                    font-size: 4vw;
+
+                    &.start {
+                        margin-bottom: 4vh;
+                    }
 
                     &.end {
-                        margin-top: 70%;
+                        margin-bottom: 7vh;
                     }
                 }
             }
+        }
+
+        .main_page_front {
 
             .welcome_embeds {
 
                 .welcome_embed_div {
-                    transform: scale(0.7);
 
                     &.youtube {
-                        bottom: 1em;
-                        left: 10%;
-                        width: 150px;
-
+                        grid-area: 6 / 4 / 7 / 5; 
                     }
 
                     &.soundcloud {
-                        bottom: 1em;
-                        left: 55%;
-                        width: 150px;
-
+                        grid-area: 6 / 11 / 7 / 12;
                     }
                 }
             }
         }
     }
 
-    @media (max-height: 700px) {
-
-        .main_page_front {
-
-
-            .welcome_text {
-
-                .welcome_message {
-                    font-size: 30px;
-                    margin-top: 40%;
-
-                    &.end {
-                        margin-top: 50%;
-                    }
-                }
-            }
-
-        }
-    }
-
-    @media (max-width: 820px) {
-
-        .main_page_front {
-
-
-            .welcome_text {
-
-                .welcome_message {
-                    font-size: 40px;
-                    margin-top: 30%;
-
-                    &.end {
-                        margin-top: 50%;
-                    }
-                }
-            }
-
-            .welcome_embeds {
-
-                .welcome_embed_div {
-                    // transform: scale(0.7);
-
-                    &.youtube {
-                        bottom: 4em;
-                        left: 10%;
-                        width: 150px;
-
-                    }
-
-                    &.soundcloud {
-                        bottom: 4em;
-                        left: 70%;
-                        width: 150px;
-
-                    }
-                }
-            }
-
-        }
-    }
 }
 
 
