--- a/resources/css/Navigator.scss
+++ b/resources/css/Navigator.scss
@@ -177,7 +177,7 @@ $color5: #000000;
             cursor: pointer;
 
             color: $color4;
-            font-size: 40px;
+            font-size: 2.5vw;
             text-decoration: none;
             text-shadow: 3px 3px 5px $color3;
 
@@ -187,7 +187,7 @@ $color5: #000000;
             &:active {
 
                 color: $color3;
-                font-size: 50px;
+                font-size: 3vw;
                 text-shadow: 3px 3px 5px $color4;
 
             }
@@ -210,7 +210,6 @@ $color5: #000000;
         }
     }
 
-    /* Media Query for Tablets and Mobile Devices */
     @media (max-width: 820px) {
 
         .burger_menu {
@@ -237,7 +236,7 @@ $color5: #000000;
             }
 
             .nav_menu_link {
-                font-size: 20px;
+                font-size: 3vw;
 
                 &:nth-child(2),
                 &:nth-child(3) {
@@ -246,7 +245,7 @@ $color5: #000000;
 
                 &:hover,
                 &:active {
-                    font-size: 25px;
+                    font-size: 3.5vw;
 
                 }
             }
