--- a/resources/css/MainPage.scss
+++ b/resources/css/MainPage.scss
@@ -69,17 +69,20 @@ $color5: #000000;
             height: 100vh;
             width: 100vw;
             display: grid;
-            grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-            grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+            grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+            grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
             gap: 0px 0px;
             grid-template-areas:
-                ". . . . . . . . . . . . . ."
-                ". YouTube . . . . . . . . . . . ."
-                ". . . . . . . . . . . . . ."
-                ". . . . . . . . . . . . . ."
-                ". . . . . . . . . . . . . ."
-                ". . SoundCloud . . . . . . . . . . ."
-                ". . . . . . . . . . . . . .";
+                ". . . . . . . . . . . . . . ."
+                ". . . . . . . . . . . . . . ."
+                ". . YouTube . . . . . . . . . . . ."
+                ". . . . . . . . . . . . . . ."
+                ". . . . . . . . . . . . . . ."
+                ". . . . . . . . . . . . . . ."
+                ". . . SoundCloud . . . . . . . . . . ."
+                ". . . . . . . . . . . . . . ."
+                ". . . . . . . . . . . . . . .";
+                
 
             // z-index: -1;
             .welcome_embed_div {
@@ -111,6 +114,7 @@ $color5: #000000;
 
                     border-radius: 2em;
                     box-shadow: 0px 0px 20px $color3;
+                    
                     z-index: 2;
                     transition: 0.5s ease-in-out;
 
@@ -155,11 +159,11 @@ $color5: #000000;
                 .welcome_embed_div {
 
                     &.youtube {
-                        grid-area: 6 / 4 / 7 / 5; 
+                        grid-area: 9 / 4 / 7 / 5; 
                     }
 
                     &.soundcloud {
-                        grid-area: 6 / 11 / 7 / 12;
+                        grid-area: 9 / 12 / 7 / 12;
                     }
                 }
             }
