--- a/resources/css/Navigator.scss
+++ b/resources/css/Navigator.scss
@@ -49,6 +49,12 @@ $color5: #000000;
         }
     }
 
+    .burger_click_me{
+        position: fixed;
+        width: 100px;
+        left: 80vw;
+    }
+
     .burger_menu {
         display: flex;
         flex-direction: column;
@@ -149,12 +155,12 @@ $color5: #000000;
 
         display: flex;
         flex-direction: column;
-        align-items: center;
         justify-content: space-evenly;
 
+        margin-top: 8%;
+        width: 350px;
+        height: 600px;
         float: right;
-        width: 500px;
-        height: inherit;
         transition: 0.5s ease-in-out;
 
 
@@ -175,9 +181,10 @@ $color5: #000000;
 
             margin-bottom: 10px;
             cursor: pointer;
+            text-align: start;
 
             color: $color4;
-            font-size: 2.5vw;
+            font-size: 2vw;
             text-decoration: none;
             text-shadow: 3px 3px 5px $color3;
 
@@ -187,14 +194,17 @@ $color5: #000000;
             &:active {
 
                 color: $color3;
-                font-size: 3vw;
+                font-size: 2.5vw;
                 text-shadow: 3px 3px 5px $color4;
 
             }
 
-            &:nth-child(2),
+            &:nth-child(2){
+                margin-left: 100px;
+            }
+            
             &:nth-child(3) {
-                margin-left: 200px;
+                margin-left: 130px;
             }
         }
 
