--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -92,3 +92,13 @@ body {
         top: 20%;
     }
 }
+
+.lottie_audio_animation{
+    width: 100vw;
+    height: 100vh;
+    position: absolute;
+    top: 0;
+    align-self: center;
+    z-index: -5;
+    opacity: 0.3;
+}
